--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
                 </button>
             </nav>
             <div class="header-actions">
+                <button class="btn-header" id="exportDataBtn" title="Exportar dados para JSON">
+                    <i class="fas fa-download"></i> Exportar Dados
+                </button>
+                <button class="btn-header" id="resetDataBtn" title="Recarregar dados do arquivo original">
+                    <i class="fas fa-sync"></i> Resetar Dados
+                </button>
                 <span class="date-display"></span>
             </div>
         </div>
