correção e retirada de dados inuteis

--- a/index.html
+++ b/index.html
@@ -288,6 +288,9 @@
                         </p>
                     </div>
                     <div style="display: flex; gap: 0.5rem; flex-wrap: wrap;">
+                        <a href="modelo_ddqod.xlsx" download="modelo_ddqod.xlsx" class="btn-primary" style="margin-top: 0.5rem; white-space: nowrap; text-decoration: none; display: inline-flex; align-items: center; gap: 0.5rem;">
+                            <i class="fas fa-download"></i> Baixar Modelo XLSX
+                        </a>
                         <button class="btn-primary" onclick="openDDQODModal()" style="margin-top: 0.5rem; white-space: nowrap;">
                             <i class="fas fa-edit"></i> Editar DDQOD
                         </button>
